--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -108,9 +108,11 @@
                         <strong>Customer Ref:</strong>
                         <t t-esc="doc.client_order_ref"/>
                         <br/>
+                        <t t-if="doc.state not in ['sale','order_booked','credit_review','pending_for_approval','cancel','done']">
                         <strong>Valid Until:</strong>
                         <t t-esc="doc.validity_date" t-options='{"widget": "date"}'/>
                         <br/>
+                        </t>
                         <strong>Salesperson:</strong>
                         <t t-esc="o.user_id.name"/>
                         <br/>
@@ -288,29 +290,29 @@
                     </span>
                 </div>
                 <div>
-                    <table style="width:170pt; height:120pt; margin-left:200px;">
-                        <tr>
-                            <td style="height:1px;  width:180px; color: black; padding-left:10px;"
+                    <table style="width:170pt;margin-left:190px; border-left: 1px solid black; border-right: 1px solid black;">
+                        <tr style="border-top: 1px solid black;">
+                            <td style="height:1px; color: black; padding-left:10px;"
                                 class="text-left">
                                 <strong>Subtotal</strong>
                             </td>
 
-                            <td style="padding-right:8px;height:1px;padding-left:10px; background-color: white; color:black;"
+                            <td style="padding-right:8px;height:1px;padding-left:10px; border-left: 1px solid black;background-color: white; color:black;"
                                 class="text-right">
                                 <span t-field="doc.amount_untaxed"/>
                             </td>
                         </tr>
-                        <tr>
+                        <tr style="border-top: 1px solid black;">
                             <td style="height:1.5px;background-color: white; padding-left:10px;"
                                 class="text-left">
                                 <strong class="text-right">Tax</strong>
                             </td>
-                            <td style="padding-right:8px; height:1.5px; color:black; background-color: white;"
+                            <td style="padding-right:8px; height:1.5px;border-left: 1px solid black; color:black; background-color: white;"
                                 class="text-right">
                                 <span t-field="doc.amount_tax"/>
                             </td>
                         </tr>
-                        <tr>
+                        <tr style="border-top: 1px solid black;">
                             <td style="padding-top:5px;color: black; padding-left:10px; background-color: white;"
                                 class="text-left">
                                 <t t-if="doc.carrier_id">
@@ -324,18 +326,18 @@
                                 </t>
 
                             </td>
-                            <td style="height:1px;padding-right:8px;padding-top:5px; padding-left:10px; background-color: white;"
+                            <td style="height:1px;padding-right:8px;padding-top:5px;border-left: 1px solid black; padding-left:10px; background-color: white;"
                                 class="text-right">
                                 <t t-esc="sum([line.price_total for line in doc.order_line if line.is_delivery])"
                                    t-options='{"widget": "monetary", "display_currency": doc.currency_id}'>
                                 </t>
                             </td>
                         </tr>
-                        <tr style="background-color: #CC5500;">
-                            <td style="padding-left:10px;color: black; height:1px ;" class="text-left">
+                        <tr style="background-color: #f56343; border-top: 1px solid black;">
+                            <td style="padding-left:10px;color: black;" class="text-left">
                                 <strong class="border-black o_subtotal;text-right">Total</strong>
                             </td>
-                            <td style=" height:1px; color: black;" class="text-right">
+                            <td style="padding-right:8px;color: black;border-left: 1px solid black;" class="text-right">
                                 <strong t-field="doc.amount_total"/>
                             </td>
                         </tr>
