--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -77,10 +77,12 @@
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
-                        <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']">
-                            <strong>Order Arrive By Date:</strong>
-                            <t t-esc="o.date_approve" t-options='{"widget": "date"}'/>
-                            <br/>
+                        <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']" >
+                            <div class="text-danger">
+                                <strong >Order Arrive By Date:</strong>
+                                <t t-esc="o.date_approve" t-options='{"widget": "date"}'/>
+                                <br/>
+                            </div>
                         </t>
                         <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
                             <strong>RFQ Date:</strong>
@@ -252,12 +254,11 @@
                             <span t-esc="0.0" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                         </td>
                     </tr>
-                    <tr style="background-color: #CC5500;">
-                        <td style="border-top: 1px solid black; border-left: 1px solid black; border-right: 1px solid black; padding-top:10px; padding-left:10px;
-                                      height:1px ;">
+                    <tr style="background-color: #f56343;">
+                        <td style="border-top: 1px solid black; border-left: 1px solid black; border-right: 1px solid black; padding-left:10px;">
                             <strong class="border-black o_subtotal;text-right">Total</strong>
                         </td>
-                        <td style="border-top: 1px solid black; padding-left:10px;padding-right:8px; height:1px ; padding-top:10px;"
+                        <td style="border-top: 1px solid black; padding-left:10px;padding-right:8px;"
                             class="text-right">
                             <strong t-field="o.amount_total"/>
                         </td>
@@ -285,7 +286,7 @@
         <xpath expr="//h2[2]" position="replace"/>
         <xpath expr="//h2[last()]" position="replace"/>
         <xpath expr="//table[hasclass('table', 'table-sm', 'o_main_table')]" position="attributes">
-            <attribute name="style">margin-bottom: 0px;</attribute>
+            <attribute name="style">margin-bottom: 20px;</attribute>
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm', 'o_main_table')]" position="before">
             <t t-if="o.special_pick_note">
