--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -423,25 +423,25 @@
     </record>
 
 
-
+    <menuitem id="bookpal_purchase_menu" name="Custom" parent="purchase.menu_purchase_config" sequence="100"/>
     <menuitem
             id="po_status_line_menu"
             action="po_status_line_action"
-            parent="purchase.menu_product_in_config_purchase"
-            sequence="4"/>
+            parent="bookpal_purchase_menu"
+            sequence="1"/>
      <menuitem id="menu_bista_purchase_line_status"
-              name="Status"
-              parent="purchase.menu_purchase_config"
+              name="Review Order Status"
+              parent="bookpal_purchase_menu"
               action="purchase_line_status_action"
-              sequence="22"/>
+              sequence="2"/>
     <menuitem id="menu_bista_purchase_rush_status"
               name="Rush Status"
-              parent="purchase.menu_product_in_config_purchase"
+              parent="bookpal_purchase_menu"
               action="rush_status_action"
-              sequence="5"/>
+              sequence="3"/>
     <menuitem id="menu_bista_purchase_shipping_instruction"
               name="Shipping Instruction"
-              parent="purchase.menu_product_in_config_purchase"
+              parent="bookpal_purchase_menu"
               action="shipping_instruction_action"
-              sequence="6"/>
+              sequence="4"/>
 </odoo>
