--- a/bista_bigcommerce_extend/views/product_template.xml
+++ b/bista_bigcommerce_extend/views/product_template.xml
@@ -12,11 +12,18 @@
                 <xpath expr="//field[@name='x_studio_manufacturer']" position="after">
                     <field name="product_format"/>
                     <field name="origin"/>
+                    <field name="full_title" />
+                    <field name="short_title" />
                 </xpath>
                 <xpath expr="//field[@name='uom_po_id']" position="after">
                     <field name="publisher_id"/>
-                    <field name="author_ids" widget="many2many_tags"/>
+                    <field name="supplier" />
+                    <field name="author_ids"/>
+                    <field name="publication_date"/>
                     <field name="isbn"/>
+                    <field name="pricing_profile" />
+                    <field name="special_title" />
+
                 </xpath>
             </field>
         </record>
