[FIX]- Feature #18454 - Purchase Order Approval Flow - rename RFQ to Purchase Order and Purchase Order to Approved Order
(cherry picked from commit 7dd0ed48d4ecb9d4959adf91008d0883ff37a504)

--- a/bista_purchase/report/purchase.xml
+++ b/bista_purchase/report/purchase.xml
@@ -22,17 +22,17 @@
             <t t-if="not o" t-set="o" t-value="doc"/>
             <t t-if="doc_model == 'purchase.order'">
                 <t t-if="o.state in ['draft','sent']">
-                    <strong>RFQ #:</strong>
+                    <strong>Purchase Order #:</strong>
                     <t t-esc="o.name"/>
                     <br/>
                 </t>
                 <t t-if="o.state not in ['draft','sent']">
-                    <strong>Purchase Order:</strong>
+                    <strong>Approved Order:</strong>
                     <t t-esc="o.name"/>
                     <br/>
                 </t>
                 <t t-if="o.state in ['draft','sent']">
-                    <strong>RFQ Date:</strong>
+                    <strong>Purchase Order Date:</strong>
                     <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                     <br/>
                 </t>
@@ -42,7 +42,7 @@
                     <br/>
                 </t>
                 <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
-                    <strong>RFQ Date:</strong>
+                    <strong>Purchase Order Date:</strong>
                     <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                     <br/>
                 </t>
