--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -46,14 +46,15 @@
                 </t>
 
                 <t t-set="report_info" class="col-6 text-right mb4">
-                    <h3 t-if="o.state in ['draft','sent','purchase','done']">Request for Quotation</h3>
+                    <h3 t-if="o.state in ['draft','sent']">Purchase Order</h3>
+                    <h3 t-if="o.state in ['purchase','done']">Approved Order</h3>
                     <h3 t-if="o.state == 'cancel'">Cancelled Purchase Quotation/Order</h3>
                     <h4>
                         <strong>
                             <t t-esc="o.name"/>
                         </strong>
                     </h4>
-                    <strong t-if="o.state in ['purchase','done','draft','sent']">RFQ Date:
+                    <strong t-if="o.state in ['purchase','done','draft','sent']">Purchase Order Date:
                         <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                     </strong>
                     <br/>
@@ -61,17 +62,17 @@
                 <t t-set="custom_information_block">
                     <div>
                         <t t-if="o.state in ['draft','sent']">
-                            <strong>RFQ #:</strong>
+                            <strong>Purchase Order #:</strong>
                             <t t-esc="o.name"/>
                             <br/>
                         </t>
                         <t t-if="o.state not in ['draft','sent']">
-                            <strong>Purchase Order:</strong>
+                            <strong>Approved Order:</strong>
                             <t t-esc="o.name"/>
                             <br/>
                         </t>
                         <t t-if="o.state in ['draft','sent']">
-                            <strong>RFQ Date:</strong>
+                            <strong>Purchase Order Date:</strong>
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
@@ -81,7 +82,7 @@
                             <br/>
                         </t>
                         <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
-                            <strong>RFQ Date:</strong>
+                            <strong>Purchase Order Date:</strong>
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
