--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -184,7 +184,7 @@
         </field>
     </record>
 
-    <record id="bista_sale_sale_quotation_delivery_tree_view" model="ir.ui.view">
+    <!-- <record id="bista_sale_sale_quotation_delivery_tree_view" model="ir.ui.view">
         <field name="name">bista.sale.sale.quotation.tree.inherit</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_quotation_tree_with_onboarding"/>
@@ -193,7 +193,8 @@
                 <field name="order_processing_time" optional="hide"/>
             </xpath>
         </field>
-    </record>
+    </record> -->
+
     <record id="view_order_tree_inherit_add_tags" model="ir.ui.view">
         <field name="name">Sale order Tree</field>
         <field name="model">sale.order</field>
