--- a/bista_sales_approval/views/sale_order_approval_button_view.xml
+++ b/bista_sales_approval/views/sale_order_approval_button_view.xml
@@ -18,7 +18,7 @@
             </xpath>
             <xpath expr="//button[@name='action_quotation_send']" position="after">
                 <field name="is_order" invisible="1" />
-                <button name="action_quote_confirm" string="Approve Quotation" type="object" class="btn-primary" states="draft" groups="bista_sales_approval.group_approve_sale_quote" confirm="Your quotation has been Approved!!" />
+                <button name="action_quote_confirm" string="Approve Quotation" type="object" class="btn-primary" states="draft" groups="bista_sales_approval.group_approve_sale_quote" />
                 <button name="action_send_quote_approval" string="Send For Quotation Approval" type="object" class="btn-primary" states="draft" groups="bista_sales_approval.group_create_sale_quote" />
                 <button name="action_quote_confirm" string="Quote Approve" type="object" states="quote_approval"
                     groups="bista_sales_approval.group_approve_sale_quote" class="btn-primary"  />
