[IMP] Feature #18566 - solved display issue on form view for Product Weight field
(cherry picked from commit ea75c06f508827c60ccb4a9dbadacc35bed10f68)

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -221,10 +221,12 @@
                 </page>
             </xpath>
             <xpath expr="//group[@name='note_group']" position="before">
-                <label for="product_weight" string="Product Weight"/>
-                <div class="o_row">
-                    <field name="product_weight" readonly="1"/>
-                    <span><field name="weight_uom_name"/></span>
+                <div class="oe_left">
+                    <label for="product_weight" />
+                    <div class="o_row">
+                        <field name="product_weight" readonly="1" />
+                        <field name="weight_uom_name" readonly="1" />
+                    </div>
                 </div>
             </xpath>
         </field>
