--- a/bista_purchase/views/res_partner_views.xml
+++ b/bista_purchase/views/res_partner_views.xml
@@ -20,6 +20,9 @@
             <xpath expr="//field[@name='child_ids']//form//field[@name='name']" position="after">
                 <field name="is_primary" attrs="{'invisible':[('type','not in',['contact'])]}"/>
             </xpath>
+            <xpath expr="//field[@name='property_delivery_carrier_id']" position="attributes">
+                <attribute name="string">Shipping Method</attribute>
+            </xpath>
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button class="oe_stat_button" name="open_partner_products" icon="fa-th-list" type="object">
                     <div class="o_field_widget o_stat_info">
