[IMP] Feature #18562- in process time added days after value in tree of sale order
(cherry picked from commit 88df7dd57500ba59231ef400a1f3d465c792988f)

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -91,10 +91,7 @@
                             <!--                            <field name='order_processing_time'/>-->
                         </group>
                         <group class="o_row">
-                            <group>
-                                <field name="order_processing_time" no_label="1"/>
-                            </group>
-                            <span class="oe_read_only">Days</span>
+                                <field name="order_processing_time" />
                         </group>
 
                         <group>
