[IMP] in feature #18562 renamed process time to process days and shown process days in orders tree view of sale order.

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -246,6 +246,9 @@
             <field name="invoice_status" position="after">
                 <field name="tag_ids" widget="many2many_tags"/>
             </field>
+            <xpath expr="//field[@name='state']" position="before">
+                <field name="order_processing_time" optional="hide"/>
+            </xpath>
         </field>
     </record>
 </odoo>
