--- a/bista_sale/views/product_views.xml
+++ b/bista_sale/views/product_views.xml
@@ -44,7 +44,11 @@
             <field name="inherit_id" ref="product.product_pricelist_item_tree_view_from_product"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='fixed_price']" position="after">
-                    <field name="price"/>
+                    <field name="price" string="Discount"/>
+                    <field name="discount_amount" string="Price"/>
+                </xpath>
+                <xpath expr="//field[@name='fixed_price']" position="attributes">
+                    <attribute name="optional">hide</attribute>
                 </xpath>
             </field>
         </record>
