[ADD] - Feature #18840 - Remove static value of shipping method in PO report
(cherry picked from commit e0c1f8ea3ccdc8237b2e7dbcd126dc9befe221fa)

--- a/bista_purchase/report/purchase.xml
+++ b/bista_purchase/report/purchase.xml
@@ -56,9 +56,9 @@
                     <br/>
                 </t>
 
-                <strong>Shipping Method :</strong>
+                <!-- <strong>Shipping Method :</strong>
                 <span>Free Delivery Method</span>
-                <br/>
+                <br/> -->
                 <t t-if="o.shipping_instructions">
                     <strong>Shipping Instructions :</strong>
                     <t t-esc="o.shipping_instructions"/>
