--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -73,9 +73,9 @@
                             <t t-esc="o.payment_term_id.name"/>
                             <br/>
                         </t>
-                        <strong>Shipping Method :</strong>
+                        <!-- <strong>Shipping Method :</strong>
                         <span>Free Delivery Method</span>
-                        <br/>
+                        <br/> -->
                         <t t-if="o.shipping_instructions">
                             <strong>Shipping Instructions :</strong>
                             <t t-esc="o.shipping_instructions.name"/>
