--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -112,9 +112,9 @@
                             <br/>
                         </t>
 
-                        <strong>Shipping Method :</strong>
+                        <!-- <strong>Shipping Method :</strong>
                         <span>Free Delivery Method</span>
-                        <br/>
+                        <br/> -->
                         <t t-if="o.shipping_instructions">
                             <strong>Shipping Instructions :</strong>
                             <t t-esc="o.shipping_instructions.name"/>
