[ADD] - Feature #18839 - change Arrive date to need by date in purchase order
(cherry picked from commit 1c29363e226d3d131ace0b55bf11e02fcb0b1c80)

--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -58,10 +58,12 @@
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
-                        <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']">
-                            <strong>Order Arrive By Date:</strong>
-                            <t t-esc="o.date_approve" t-options='{"widget": "date"}'/>
-                            <br/>
+                        <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']" >
+                            <div class="text-danger">
+                                <strong >Order Need By Date:</strong>
+                                <t t-esc="o.date_approve" t-options='{"widget": "date"}'/>
+                                <br/>
+                            </div>
                         </t>
                         <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
                             <strong>RFQ Date:</strong>
