--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -56,7 +56,7 @@
                             <br/>
                         </t>
                         <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']">
-                            <strong>Order Arrive By Date:</strong>
+                            <strong>Order Need By Date:</strong>
                             <t t-esc="o.date_approve" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
