[IMP]Improved Feature #18838 - change shipping instruction positiona and make required internal note and shipping note.
(cherry picked from commit b0784ff475ffc031187971f0ecea8b156c9946bd)

--- a/bista_stock_remarks/views/purchase_order.xml
+++ b/bista_stock_remarks/views/purchase_order.xml
@@ -11,7 +11,8 @@
                     <group colspan="4">
                         <field name="special_pick_note"
                                class="oe-bordered-editor" nolabel="1"
-                               placeholder="Special Picking Notes..."/>
+                               placeholder="Special Picking Notes..."
+                               required="1"/>
                     </group>
                 </group>
             </xpath>
