[IMP]Improved Feature #18838 - change shipping instruction positiona and make required internal note and shipping note.

--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -121,10 +121,13 @@
                 </page>
                 <page name="ops_project_owner" string="Steps and Nuances">
                     <group>
+                        <field name="shipping_instructions" class="oe_inline" required="1"/>
+                    </group>
+                    <group>
                         <group name="ops_project_owner" string="Ops Project Owner">
                             <field name="ordered_by"/>
                             <field name="ops_project_owner_id"/>
-                            <field name="shipping_instructions"/>
+                            
                         </group>
                         <!--                        <group name="approved_payment" string="Approved Payment">-->
                         <!--                            <field name="billing_notes" style="max-height: 25px;"/>-->
