[FIX] - Feature #18454 - Purchase Order Approval Flow- adding rejected state filter and highlight buttons on PO
(cherry picked from commit a7d0f48289674423ede753aa4cae20f5246d61c0)

--- a/bista_purchase/report/report_templates.xml
+++ b/bista_purchase/report/report_templates.xml
@@ -15,7 +15,7 @@
                              class="col-6 text-right mb4">
                             <!--                            <h3 t-if="o.state in []">Request for Quotation</h3>-->
                             <h3 t-if="o.state in ['draft','sent','purchase','done']">Purchase Order</h3>
-                            <h3 t-if="o.state == 'cancel'">Cancelled Purchase Quotation/Order</h3>
+                            <h3 t-if="o.state == 'cancel'">Cancelled Purchase Order/Approved Order</h3>
                             <h4>
                                 <strong>
                                     <t t-esc="o.name"/>
@@ -33,7 +33,7 @@
                              class="col-6 text-right mb4">
                             <h3 t-if="o.state in ['draft','sent','purchase','done']">Request for Quotation</h3>
                             <!--                            <h3 t-if="o.state in []">Purchase Order</h3>-->
-                            <h3 t-if="o.state == 'cancel'">Cancelled Purchase Quotation/Order</h3>
+                            <h3 t-if="o.state == 'cancel'">Cancelled Purchase Order/Approved Order</h3>
                             <h4>
                                 <strong>
                                     <t t-esc="o.name"/>
@@ -52,7 +52,7 @@
                 <t t-if="doc_model == 'purchase.order' and o.state in ['draft','sent'] and xmlid == 'purchase.report_purchaseorder'">
                     <div class="watermark"
                          style="top:450px; left: 90px; border: 2px solid green; font-size:7em; position:fixed; text-align:center; width:70%; opacity:0.25; -webkit-transform: rotate(-30deg);">
-                        <p>Draft</p>
+                        <p>Purchase Order</p>
                     </div>
                 </t>
             </t>
