--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -10,14 +10,14 @@
                 <attribute name="context">{'res_partner_search_mode': 'supplier', 'show_address': 1, 'show_vat': True}</attribute>
             </xpath>
             <xpath expr="//button[@id='draft_confirm']" position="replace">
-                <button name="button_confirm" type="object" states="draft" string="Send for Approval" id="draft_confirm"/>
+                <button name="button_confirm" type="object" states="draft" string="Send for Approval" id="draft_confirm" class="oe_highlight"/>
             </xpath>
             <xpath expr="//button[@id='bid_confirm']" position="attributes">
                 <attribute name="context">{'skip_approval': True}</attribute>
-                <attribute name="string">Approve Orders</attribute>
+                <attribute name="string">Approve Order</attribute>
             </xpath>
             <xpath expr="//button[@name='button_approve']" position="after">
-                <button name="button_confirm" type="object" states="draft" string="Approve Orders" context="{'skip_approval': True}"/>
+                <button name="button_confirm" type="object" states="draft" string="Approve Order" class="oe_highlight" context="{'skip_approval': True}"/>
                 <button name="button_reject" type="object" states='to approve' string="Reject Order" class="oe_highlight" groups="purchase.group_purchase_manager" />
             </xpath>
             <xpath expr="//button[@name='print_quotation'][1]" position="attributes">
@@ -29,6 +29,7 @@
             <xpath expr="//button[@name='button_draft']" position="attributes">
                 <attribute name="string">Set to Purchase Order</attribute>
                 <attribute name="states">cancel,reject</attribute>
+                <attribute name="class">oe_highlight</attribute>
             </xpath>
             <xpath expr="//button[@name='action_rfq_send'][1]" position="attributes">
                 <attribute name="string">Send PO by Email</attribute>
@@ -246,6 +247,12 @@
         <field name="model">purchase.order</field>
         <field name="inherit_id" ref="purchase.purchase_order_kpis_tree"/>
         <field name="arch" type="xml">
+            <xpath expr="//tree" position="attributes">
+                <attribute name="decoration-danger">state == 'reject'</attribute>
+            </xpath>
+            <xpath expr="//field[@name='state']" position="attributes">
+                <attribute name="decoration-danger">state == 'reject'</attribute>
+            </xpath>
             <xpath expr="//field[@name='state']" position="before">
                 <field name="is_email_sent"/>
             </xpath>
@@ -452,6 +459,9 @@
             </xpath>
             <xpath expr="//filter[@name='late_rfqs']" position="attributes">
                 <attribute name="string">Late Purchase Orders</attribute>
+            </xpath>
+            <xpath expr="//filter[@name='approved']" position="after">
+                <filter name="reject" string="Rejected" domain="[('state', 'in', ['reject'])]"/>
             </xpath>
         </field>
     </record>
