--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -71,21 +71,22 @@
                             <t t-esc="o.name"/>
                             <br/>
                         </t>
-                        <t t-if="o.state in ['draft','sent']">
+                        <!-- <t t-if="o.state in ['draft','sent']">
                             <strong>Purchase Order Date:</strong>
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                             <br/>
-                        </t>
-                        <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']">
+                        </t> -->
+                        <!-- <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']"> -->
+                        <t t-if="o.need_by_date">
                             <strong>Order Need By Date:</strong>
-                            <t t-esc="o.date_approve" t-options='{"widget": "date"}'/>
+                            <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
-                        <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
+                        <!-- <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
                             <strong>Purchase Order Date:</strong>
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                             <br/>
-                        </t>
+                        </t> -->
                         <strong>BookPal Account # :</strong>
                         <t t-esc="428475"/>
                         <br/>
